crates/fixtures/tests/snapshots/hostile__content_display_text_clusters.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "office Z̵̢̛̲ å̊ ‮abc office‬ 👩‍👩‍👧‍👦 end.",
            "glyphs": [
              {
                "id": 42,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 418,
                "x": 6184,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 4
                }
              },
              {
                "id": 30,
                "x": 16547,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 22044,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 27789,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 27,
                "x": 30414,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 16
                }
              },
              {
                "id": 0,
                "x": 36620,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 16
                }
              },
              {
                "id": 0,
                "x": 43829,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 16
                }
              },
              {
                "id": 804,
                "x": 51038,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 16
                }
              },
              {
                "id": 0,
                "x": 51038,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 16
                }
              },
              {
                "id": 1,
                "x": 58247,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 250,
                "x": 60872,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 22
                }
              },
              {
                "id": 789,
                "x": 66605,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 22
                }
              },
              {
                "id": 1,
                "x": 66605,
                "y": 10707,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 1,
                "x": 69230,
                "y": 10707,
                "text": {
                  "start": 23,
                  "end": 26
                }
              },
              {
                "id": 28,
                "x": 69230,
                "y": 10707,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 29,
                "x": 74963,
                "y": 10707,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 30,
                "x": 81462,
                "y": 10707,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 1,
                "x": 86959,
                "y": 10707,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 42,
                "x": 89584,
                "y": 10707,
                "text": {
                  "start": 30,
                  "end": 31
                }
              },
              {
                "id": 418,
                "x": 95768,
                "y": 10707,
                "text": {
                  "start": 31,
                  "end": 34
                }
              },
              {
                "id": 30,
                "x": 106131,
                "y": 10707,
                "text": {
                  "start": 34,
                  "end": 35
                }
              },
              {
                "id": 32,
                "x": 111628,
                "y": 10707,
                "text": {
                  "start": 35,
                  "end": 36
                }
              },
              {
                "id": 1,
                "x": 117373,
                "y": 10707,
                "text": {
                  "start": 36,
                  "end": 39
                }
              },
              {
                "id": 1,
                "x": 117373,
                "y": 10707,
                "text": {
                  "start": 39,
                  "end": 40
                }
              },
              {
                "id": 0,
                "x": 119998,
                "y": 10707,
                "text": {
                  "start": 40,
                  "end": 65
                }
              },
              {
                "id": 1,
                "x": 127207,
                "y": 10707,
                "text": {
                  "start": 40,
                  "end": 65
                }
              },
              {
                "id": 0,
                "x": 127207,
                "y": 10707,
                "text": {
                  "start": 40,
                  "end": 65
                }
              },
              {
                "id": 1,
                "x": 134416,
                "y": 10707,
                "text": {
                  "start": 40,
                  "end": 65
                }
              },
              {
                "id": 0,
                "x": 134416,
                "y": 10707,
                "text": {
                  "start": 40,
                  "end": 65
                }
              },
              {
                "id": 1,
                "x": 141625,
                "y": 10707,
                "text": {
                  "start": 40,
                  "end": 65
                }
              },
              {
                "id": 0,
                "x": 141625,
                "y": 10707,
                "text": {
                  "start": 40,
                  "end": 65
                }
              },
              {
                "id": 1,
                "x": 148834,
                "y": 10707,
                "text": {
                  "start": 65,
                  "end": 66
                }
              },
              {
                "id": 32,
                "x": 151459,
                "y": 10707,
                "text": {
                  "start": 66,
                  "end": 67
                }
              },
              {
                "id": 41,
                "x": 157204,
                "y": 10707,
                "text": {
                  "start": 67,
                  "end": 68
                }
              },
              {
                "id": 31,
                "x": 164030,
                "y": 10707,
                "text": {
                  "start": 68,
                  "end": 69
                }
              },
              {
                "id": 473,
                "x": 170417,
                "y": 10707,
                "text": {
                  "start": 69,
                  "end": 70
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
