crates/fixtures/tests/snapshots/hostile__content_editing_concurrent_delete_undo.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "anchor office é ",
            "glyphs": [
              {
                "id": 28,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 41,
                "x": 5677,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 30,
                "x": 12503,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 35,
                "x": 17876,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 42,
                "x": 24646,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 45,
                "x": 30830,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 35595,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 42,
                "x": 38220,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 418,
                "x": 44404,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 11
                }
              },
              {
                "id": 30,
                "x": 54767,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 32,
                "x": 60264,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 1,
                "x": 66009,
                "y": 10707,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 263,
                "x": 68634,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 17
                }
              },
              {
                "id": 1,
                "x": 74379,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 18
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "אב",
            "glyphs": [
              {
                "id": 0,
                "x": 77004,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 4
                }
              },
              {
                "id": 0,
                "x": 84213,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 2
                }
              }
            ],
            "layer": "content"
          }
        ]
      },
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 280576,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 8448,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Restored identity.",
            "glyphs": [
              {
                "id": 19,
                "x": 0,
                "y": 8241,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 5415,
                "y": 8241,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 46,
                "x": 9723,
                "y": 8241,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 47,
                "x": 13389,
                "y": 8241,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 42,
                "x": 16135,
                "y": 8241,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 45,
                "x": 20773,
                "y": 8241,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 32,
                "x": 24262,
                "y": 8241,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 31,
                "x": 28570,
                "y": 8241,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 1,
                "x": 33360,
                "y": 8241,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 36,
                "x": 35328,
                "y": 8241,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 31,
                "x": 37846,
                "y": 8241,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 32,
                "x": 42636,
                "y": 8241,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 41,
                "x": 46944,
                "y": 8241,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 47,
                "x": 52021,
                "y": 8241,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 36,
                "x": 54767,
                "y": 8241,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 47,
                "x": 57285,
                "y": 8241,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 52,
                "x": 60031,
                "y": 8241,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 473,
                "x": 63588,
                "y": 8241,
                "text": {
                  "start": 17,
                  "end": 18
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
