crates/fixtures/tests/snapshots/hostile__content_editing_empty_block.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "office é ​ ",
            "glyphs": [
              {
                "id": 42,
                "x": 0,
                "y": 32416,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 418,
                "x": 6184,
                "y": 32416,
                "text": {
                  "start": 1,
                  "end": 4
                }
              },
              {
                "id": 30,
                "x": 16547,
                "y": 32416,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 22044,
                "y": 32416,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 27789,
                "y": 32416,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 263,
                "x": 30414,
                "y": 32416,
                "text": {
                  "start": 7,
                  "end": 10
                }
              },
              {
                "id": 1,
                "x": 36159,
                "y": 32416,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 1,
                "x": 38784,
                "y": 32416,
                "text": {
                  "start": 11,
                  "end": 14
                }
              },
              {
                "id": 1,
                "x": 38784,
                "y": 32416,
                "text": {
                  "start": 14,
                  "end": 15
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "אבג",
            "glyphs": [
              {
                "id": 0,
                "x": 41409,
                "y": 32416,
                "text": {
                  "start": 4,
                  "end": 6
                }
              },
              {
                "id": 0,
                "x": 48618,
                "y": 32416,
                "text": {
                  "start": 2,
                  "end": 4
                }
              },
              {
                "id": 0,
                "x": 55827,
                "y": 32416,
                "text": {
                  "start": 0,
                  "end": 2
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": " ",
            "glyphs": [
              {
                "id": 1,
                "x": 63036,
                "y": 32416,
                "text": {
                  "start": 0,
                  "end": 1
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "xyz",
            "glyphs": [
              {
                "id": 51,
                "x": 65661,
                "y": 32416,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 52,
                "x": 71586,
                "y": 32416,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 53,
                "x": 77353,
                "y": 32416,
                "text": {
                  "start": 2,
                  "end": 3
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 0,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "zero",
            "glyphs": [
              {
                "id": 53,
                "x": 0,
                "y": 43418,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 0,
                "y": 43418,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 45,
                "x": 0,
                "y": 43418,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 0,
                "y": 43418,
                "text": {
                  "start": 3,
                  "end": 4
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
