crates/fixtures/tests/snapshots/hostile__content_editing_empty_document.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": []
  }
]
