crates/fixtures/tests/snapshots/hostile__content_editing_half_invalid.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "héllo",
            "glyphs": [
              {
                "id": 35,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 263,
                "x": 6770,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 3
                }
              },
              {
                "id": 39,
                "x": 12402,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 39,
                "x": 15759,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 42,
                "x": 19116,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Keep this block.",
            "glyphs": [
              {
                "id": 12,
                "x": 0,
                "y": 32416,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 7288,
                "y": 32416,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 32,
                "x": 13033,
                "y": 32416,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 43,
                "x": 18665,
                "y": 32416,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 1,
                "x": 25232,
                "y": 32416,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 47,
                "x": 27857,
                "y": 32416,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 35,
                "x": 31518,
                "y": 32416,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 36,
                "x": 38288,
                "y": 32416,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 46,
                "x": 41645,
                "y": 32416,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 1,
                "x": 46534,
                "y": 32416,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 29,
                "x": 49159,
                "y": 32416,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 39,
                "x": 55546,
                "y": 32416,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 42,
                "x": 58903,
                "y": 32416,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 30,
                "x": 65087,
                "y": 32416,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 38,
                "x": 70460,
                "y": 32416,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 473,
                "x": 76621,
                "y": 32416,
                "text": {
                  "start": 15,
                  "end": 16
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
